--- a/next-gen-ui/final/web/manifest.json
+++ b/next-gen-ui/final/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_scifi",
-    "short_name": "flutter_scifi",
+    "name": "next_gen_ui",
+    "short_name": "next_gen_ui",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
