--- a/in_app_purchases/step_08/dart-backend/pubspec.yaml
+++ b/in_app_purchases/step_08/dart-backend/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.17.0-0 <3.0.0'
+  sdk: '>=2.19.5 <4.0.0'
 
 dependencies:
   googleapis: ">=9.2.0 <11.0.0"
