--- a/next-gen-ui/codelab_rebuild.yaml
+++ b/next-gen-ui/codelab_rebuild.yaml
@@ -2178,7 +2178,7 @@ steps:
                       Image.asset(AssetPaths.titleSelectedRight, height: 65),
                     ],
                   ),
-                  Text('THE LAST STAND', style: TextStyles.h3),
+                  Text('INTO THE UNKNOWN', style: TextStyles.h3),
                 ],
               );
             }
@@ -2686,9 +2686,9 @@ steps:
                        Image.asset(AssetPaths.titleSelectedRight, height: 65),
                      ],
           -        ),
-          -        Text('THE LAST STAND', style: TextStyles.h3),
+          -        Text('INTO THE UNKNOWN', style: TextStyles.h3),
           +        ).animate().fadeIn(delay: .8.seconds, duration: .7.seconds),
-          +        Text('THE LAST STAND', style: TextStyles.h3)
+          +        Text('INTO THE UNKNOWN', style: TextStyles.h3)
           +            .animate()
           +            .fadeIn(delay: 1.seconds, duration: .7.seconds),
                  ],
